--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
     </head>
 
-    <body data-theme="vintage">
+    <body loading="lazy" data-theme="vintage">
         <!-- Theme Switcher - Updated to be transparent without text -->
         <div class="theme-switcher">
             <button class="theme-btn theme-vintage active" data-theme="vintage" title="Vintage Theme"></button>
             <button class="theme-btn theme-blue" data-theme="blue" title="Blue Theme"></button>
             <button class="theme-btn theme-bw" data-theme="bw" title="Black & White Theme"></button>
+            <button class="theme-btn theme-block" data-theme="br" title="Blocks and Round"></button>
         </div>
 
         <!-- Navigation -->
@@ -54,7 +55,7 @@
                         <p class="home-description">
                             Crafting digital experiences with passion and precision.
                             I specialize in creating elegant solutions to complex problems
-                            using modern web technologies.
+                            using modern technologies.
                         </p>
                         <div class="home-buttons">
                             <a href="#projects" class="btn btn-primary">View My Work</a>
@@ -830,7 +831,7 @@
                                 <div class="contact-icon">📱</div>
                                 <div class="contact-details">
                                     <h4>Phone</h4>
-                                    <a href="tel:+1234567890">+1 (234) 567-8900</a>
+                                    <a href="tel:+94716336788">+94 (071) 633-6788</a>
                                 </div>
                             </div>
 
@@ -838,7 +839,7 @@
                                 <div class="contact-icon">📍</div>
                                 <div class="contact-details">
                                     <h4>Location</h4>
-                                    <span>San Francisco, CA</span>
+                                    <span>Galle, Sri Lanka</span>
                                 </div>
                             </div>
 
@@ -846,8 +847,8 @@
                                 <div class="contact-icon">💼</div>
                                 <div class="contact-details">
                                     <h4>LinkedIn</h4>
-                                    <a href="https://linkedin.com/in/johndoe"
-                                        target="_blank">linkedin.com/in/johndoe</a>
+                                    <a href="https://linkedin.com/in/nadun-udaraka"
+                                        target="_blank">linkedin.com/in/nadun-udaraka</a>
                                 </div>
                             </div>
                         </div>
@@ -855,19 +856,19 @@
                         <div class="social-links">
                             <h4>Follow Me</h4>
                             <div class="social-icons">
-                                <a href="https://github.com/johndoe" class="social-link" target="_blank">
+                                <a href="https://github.com/nadun96" class="social-link" target="_blank">
                                     <span class="social-icon">🐙</span>
                                     GitHub
                                 </a>
-                                <a href="https://twitter.com/johndoe" class="social-link" target="_blank">
+                                <a href="https://twitter.com/nadun-udaraka" class="social-link" target="_blank">
                                     <span class="social-icon">🐦</span>
                                     Twitter
                                 </a>
-                                <a href="https://linkedin.com/in/johndoe" class="social-link" target="_blank">
+                                <a href="https://linkedin.com/in/nadun-udaraka" class="social-link" target="_blank">
                                     <span class="social-icon">💼</span>
                                     LinkedIn
                                 </a>
-                                <a href="https://dribbble.com/johndoe" class="social-link" target="_blank">
+                                <a href="https://dribbble.com/nadun-udaraka" class="social-link" target="_blank">
                                     <span class="social-icon">🏀</span>
                                     Dribbble
                                 </a>
@@ -915,12 +916,12 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="footer-text">
-                        <p>&copy; 2024 Nadun Udaraka. Crafted with passion and vintage aesthetics.</p>
+                        <p>&copy; 2025 Nadun Udaraka. Crafted with passion and vintage aesthetics.</p>
                     </div>
                     <div class="footer-links">
-                        <a href="mailto:john@example.com" class="footer-link">Email</a>
-                        <a href="https://linkedin.com/in/johndoe" class="footer-link">LinkedIn</a>
-                        <a href="https://github.com/johndoe" class="footer-link">GitHub</a>
+                        <a href="mailto:nadunudaraka@gmail.com" class="footer-link">Email</a>
+                        <a href="https://linkedin.com/in/nadun-udaraka" target="new" class="footer-link">LinkedIn</a>
+                        <a href="https://github.com/nadun96" target="new" class="footer-link">GitHub</a>
                     </div>
                 </div>
             </div>
