--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="theme-btn theme-vintage active" data-theme="vintage" title="Vintage Theme"></button>
             <button class="theme-btn theme-blue" data-theme="blue" title="Blue Theme"></button>
             <button class="theme-btn theme-bw" data-theme="bw" title="Black & White Theme"></button>
+            <button class="theme-btn theme-sr" data-theme="sr" title="Square & Round"></button>
         </div>
 
         <!-- Navigation -->
