--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                         <div class="about-intro">
                             <h3 class="about-subtitle">Passionate Developer & Problem Solver</h3>
                             <p class="about-description">
-                                With over 6 years of experience in web development, I've had the privilege of working
+                                With over 2 years of experience in software development, I've had the privilege of
+                                working
                                 with diverse teams and clients to bring digital visions to life. My journey began with
                                 a curiosity about how websites work, and it has evolved into a deep passion for creating
                                 meaningful digital experiences.
@@ -116,15 +117,15 @@
 
                     <div class="about-stats">
                         <div class="stat-card" data-aos="fade-up">
-                            <div class="stat-number">50+</div>
+                            <div class="stat-number">5+</div>
                             <div class="stat-label">Projects Completed</div>
                         </div>
                         <div class="stat-card" data-aos="fade-up" data-aos-delay="100">
-                            <div class="stat-number">6+</div>
+                            <div class="stat-number">2+</div>
                             <div class="stat-label">Years Experience</div>
                         </div>
                         <div class="stat-card" data-aos="fade-up" data-aos-delay="200">
-                            <div class="stat-number">25+</div>
+                            <div class="stat-number">5+</div>
                             <div class="stat-label">Happy Clients</div>
                         </div>
                         <div class="stat-card" data-aos="fade-up" data-aos-delay="300">
@@ -374,7 +375,7 @@
                                 <div class="contact-icon">📧</div>
                                 <div class="contact-details">
                                     <h4>Email</h4>
-                                    <a href="mailto:john@example.com">john@example.com</a>
+                                    <a href="mailto:nadunudaraka@gmail.com">nadunudaraka@gmail.com</a>
                                 </div>
                             </div>
 
@@ -382,7 +383,7 @@
                                 <div class="contact-icon">📱</div>
                                 <div class="contact-details">
                                     <h4>Phone</h4>
-                                    <a href="tel:+1234567890">+1 (234) 567-8900</a>
+                                    <a href="tel:+94716336788">+94 (71) 633-6788</a>
                                 </div>
                             </div>
 
@@ -390,7 +391,7 @@
                                 <div class="contact-icon">📍</div>
                                 <div class="contact-details">
                                     <h4>Location</h4>
-                                    <span>San Francisco, CA</span>
+                                    <span>Galle, SL</span>
                                 </div>
                             </div>
 
@@ -398,8 +399,8 @@
                                 <div class="contact-icon">💼</div>
                                 <div class="contact-details">
                                     <h4>LinkedIn</h4>
-                                    <a href="https://linkedin.com/in/johndoe"
-                                        target="_blank">linkedin.com/in/johndoe</a>
+                                    <a href="https://linkedin.com/in/nadun-udaraka"
+                                        target="_blank">linkedin.com/in/nadun-udaraka</a>
                                 </div>
                             </div>
                         </div>
@@ -407,19 +408,19 @@
                         <div class="social-links">
                             <h4>Follow Me</h4>
                             <div class="social-icons">
-                                <a href="https://github.com/johndoe" class="social-link" target="_blank">
+                                <a href="https://github.com/nadun96" class="social-link" target="_blank">
                                     <span class="social-icon">🐙</span>
                                     GitHub
                                 </a>
-                                <a href="https://twitter.com/johndoe" class="social-link" target="_blank">
+                                <a href="https://twitter.com/ndaun-udaraka" class="social-link" target="_blank">
                                     <span class="social-icon">🐦</span>
                                     Twitter
                                 </a>
-                                <a href="https://linkedin.com/in/johndoe" class="social-link" target="_blank">
+                                <a href="https://linkedin.com/in/nadun-udaraka" class="social-link" target="_blank">
                                     <span class="social-icon">💼</span>
                                     LinkedIn
                                 </a>
-                                <a href="https://dribbble.com/johndoe" class="social-link" target="_blank">
+                                <a href="https://dribbble.com/nadun-udaraka" class="social-link" target="_blank">
                                     <span class="social-icon">🏀</span>
                                     Dribbble
                                 </a>
@@ -467,12 +468,12 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="footer-text">
-                        <p>&copy; 2024 Nadun Udaraka. Crafted with passion and vintage aesthetics.</p>
+                        <p>&copy; 2025 Nadun Udaraka. Crafted with passion and vintage aesthetics.</p>
                     </div>
                     <div class="footer-links">
-                        <a href="mailto:john@example.com" class="footer-link">Email</a>
-                        <a href="https://linkedin.com/in/johndoe" class="footer-link">LinkedIn</a>
-                        <a href="https://github.com/johndoe" class="footer-link">GitHub</a>
+                        <a href="mailto:nadunudaraka@gmail.com" class="footer-link">Email</a>
+                        <a href="https://linkedin.com/in/nadun-udaraka" class="footer-link">LinkedIn</a>
+                        <a href="https://github.com/nadun96" class="footer-link">GitHub</a>
                     </div>
                 </div>
             </div>
