modified:   index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="home-image">
                         <div class="profile-frame">
-                            <img src="/profile image.jpg" alt="Nadun Udaraka" class="profile-img">
+                            <img src="https://github.com/nadun96/complete_portfolio/blob/main/profile%20image.jpg/" alt="Nadun Udaraka" class="profile-img">
                         </div>
                     </div>
                 </div>
