--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="home-image">
                         <div class="profile-frame">
-                            <img src="profile image.jpg" alt="Nadun Udaraka" class="profile-img">
+                            <img src="./profile image.jpg" alt="Nadun Udaraka" class="profile-img">
                         </div>
                     </div>
                 </div>
