--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400;600&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+
+        <!-- <script src="uiInteractions.js"></script> -->
     </head>
 
     <body data-theme="vintage">
@@ -478,8 +480,9 @@
                 </div>
             </div>
         </footer>
-
-        <script src="script.js"></script>
+        <script src="uiInteractions.js"></script>
+        <script src="dataLoader.js"></script>
+        <!-- <script src="script.js"></script> -->
     </body>
 
 </html>
