mobile view bug fixed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
 
-        <!-- <script src="uiInteractions.js"></script> -->
+        <script type="module" src="data_manager.js"></script>
+        <script type="module" src="ui_handler.js"></script>
     </head>
 
     <body data-theme="vintage">
@@ -480,9 +481,6 @@
                 </div>
             </div>
         </footer>
-        <script src="uiInteractions.js"></script>
-        <script src="dataLoader.js"></script>
-        <!-- <script src="script.js"></script> -->
     </body>
 
 </html>
