--- a/index.html
+++ b/index.html
@@ -218,57 +218,19 @@
         <section id="education" class="education-section">
             <div class="container">
                 <h2 class="section-title">Education</h2>
-                <div class="timeline">
-                    <div class="timeline-item" data-aos="fade-right">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3 class="timeline-title">Master of Computer Science</h3>
-                            <h4 class="timeline-subtitle">Stanford University</h4>
-                            <span class="timeline-date">2018 - 2020</span>
-                            <p class="timeline-description">
-                                Specialized in Software Engineering and Machine Learning.
-                                Graduated with honors, GPA: 3.8/4.0
-                            </p>
-                            <div class="timeline-achievements">
-                                <span class="achievement-tag">Dean's List</span>
-                                <span class="achievement-tag">Research Assistant</span>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="timeline-item" data-aos="fade-left">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3 class="timeline-title">Bachelor of Computer Engineering</h3>
-                            <h4 class="timeline-subtitle">University of California, Berkeley</h4>
-                            <span class="timeline-date">2014 - 2018</span>
-                            <p class="timeline-description">
-                                Comprehensive study in computer systems, algorithms, and software development.
-                                Active member of the Computer Science Society.
-                            </p>
-                            <div class="timeline-achievements">
-                                <span class="achievement-tag">Magna Cum Laude</span>
-                                <span class="achievement-tag">CS Society President</span>
-                            </div>
-                        </div>
+                <!-- Education Search -->
+                <div class="section-search">
+                    <div class="search-wrapper">
+                        <span class="search-icon">🔍</span>
+                        <input type="text" class="search-input" id="educationSearch" placeholder="Search education...">
+                        <button class="search-clear" id="educationClear">&times;</button>
                     </div>
+                </div>
+                <div class="search-results-info" id="educationResults"></div>
 
-                    <div class="timeline-item" data-aos="fade-right">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3 class="timeline-title">Full Stack Web Development</h3>
-                            <h4 class="timeline-subtitle">freeCodeCamp Certification</h4>
-                            <span class="timeline-date">2017</span>
-                            <p class="timeline-description">
-                                Comprehensive certification covering HTML, CSS, JavaScript, React,
-                                Node.js, and database management.
-                            </p>
-                            <div class="timeline-achievements">
-                                <span class="achievement-tag">300+ Hours</span>
-                                <span class="achievement-tag">5 Projects</span>
-                            </div>
-                        </div>
-                    </div>
+                <div class="timeline" id="educationTimeline">
+                    <!-- Education entries will be loaded dynamically -->
                 </div>
             </div>
         </section>
@@ -277,75 +239,19 @@
         <section id="experience" class="experience-section">
             <div class="container">
                 <h2 class="section-title">Professional Experience</h2>
-                <div class="timeline">
-                    <div class="timeline-item" data-aos="fade-right">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3 class="timeline-title">Senior Full Stack Developer</h3>
-                            <h4 class="timeline-subtitle">TechCorp Solutions</h4>
-                            <span class="timeline-date">2021 - Present</span>
-                            <p class="timeline-description">
-                                Lead development of enterprise web applications serving 100K+ users.
-                                Mentor junior developers and architect scalable solutions.
-                            </p>
-                            <div class="timeline-achievements">
-                                <span class="achievement-tag">Team Lead</span>
-                                <span class="achievement-tag">Architecture</span>
-                                <span class="achievement-tag">Mentoring</span>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="timeline-item" data-aos="fade-left">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3 class="timeline-title">Full Stack Developer</h3>
-                            <h4 class="timeline-subtitle">StartupXYZ</h4>
-                            <span class="timeline-date">2020 - 2021</span>
-                            <p class="timeline-description">
-                                Developed and maintained multiple client projects using React, Node.js,
-                                and cloud technologies. Improved application performance by 40%.
-                            </p>
-                            <div class="timeline-achievements">
-                                <span class="achievement-tag">Performance Optimization</span>
-                                <span class="achievement-tag">Cloud Deployment</span>
-                            </div>
-                        </div>
+                <!-- Experience Search -->
+                <div class="section-search">
+                    <div class="search-wrapper">
+                        <span class="search-icon">🔍</span>
+                        <input type="text" class="search-input" id="experienceSearch" placeholder="Search experience...">
+                        <button class="search-clear" id="experienceClear">&times;</button>
                     </div>
+                </div>
+                <div class="search-results-info" id="experienceResults"></div>
 
-                    <div class="timeline-item" data-aos="fade-right">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3 class="timeline-title">Frontend Developer</h3>
-                            <h4 class="timeline-subtitle">WebDev Agency</h4>
-                            <span class="timeline-date">2018 - 2020</span>
-                            <p class="timeline-description">
-                                Created responsive web applications and collaborated with design teams
-                                to implement pixel-perfect user interfaces.
-                            </p>
-                            <div class="timeline-achievements">
-                                <span class="achievement-tag">Responsive Design</span>
-                                <span class="achievement-tag">UI/UX Implementation</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="timeline-item" data-aos="fade-left">
-                        <div class="timeline-marker"></div>
-                        <div class="timeline-content">
-                            <h3 class="timeline-title">Junior Web Developer</h3>
-                            <h4 class="timeline-subtitle">Digital Solutions Inc.</h4>
-                            <span class="timeline-date">2017 - 2018</span>
-                            <p class="timeline-description">
-                                Started my professional journey building websites and learning
-                                industry best practices. Contributed to 15+ successful projects.
-                            </p>
-                            <div class="timeline-achievements">
-                                <span class="achievement-tag">15+ Projects</span>
-                                <span class="achievement-tag">Quick Learner</span>
-                            </div>
-                        </div>
-                    </div>
+                <div class="timeline" id="experienceTimeline">
+                    <!-- Experience entries will be loaded dynamically -->
                 </div>
             </div>
         </section>
