feat: Add education, experience, projects, and skills data modules
- Introduced educationData.js containing educational qualifications and achievements.
- Added experienceData.js for work experience details including roles, responsibilities, and skills.
- Created projectsData.js to showcase personal projects with descriptions and technologies used.
- Implemented skillsData.js to list technical skills with descriptions and proficiency levels.
- Developed rendering modules for certifications, education, experience, projects, and skills.
- Enhanced UIManager for improved navigation, theme switching, and form handling.
- Implemented search functionality across various sections for better user experience.
- Added migration script to assist in restructuring the portfolio files and directories.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400;600&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
 
-        <script type="module" src="data_manager.js"></script>
-        <script type="module" src="ui_handler.js"></script>
+        <script type="module" src="js/app.js"></script>
     </head>
 
     <body data-theme="vintage">
@@ -66,7 +65,7 @@
                     </div>
                     <div class="home-image">
                         <div class="profile-frame">
-                            <img src="./profileimage.jpg" alt="Nadun Udaraka" class="profile-img">
+                            <img src="./assets/images/profileimage.jpg" alt="Nadun Udaraka" class="profile-img">
                         </div>
                     </div>
                 </div>
